--- a/src/main/resources/views/AllSerialsView.fxml
+++ b/src/main/resources/views/AllSerialsView.fxml
@@ -6,7 +6,12 @@
       fx:controller="app.controllers.AllSerialsController"
       spacing="10" style="-fx-padding: 15;" prefWidth="600" prefHeight="500">
 
-    <Label text="اختر سيريال:" style="-fx-font-size: 16px; -fx-font-weight: bold;"/>
+    <Label text="قائمة السيريالات" style="-fx-font-size: 18px; -fx-font-weight: bold;"/>
+
+    <HBox spacing="10" alignment="CENTER_LEFT">
+        <Label text="بحث:"/>
+        <TextField fx:id="searchField" promptText="ابحث برقم السيريال..." prefWidth="250"/>
+    </HBox>
 
     <TableView fx:id="serialsTable" prefHeight="400">
         <columns>
